--- a/en.tex
+++ b/en.tex
@@ -8,7 +8,7 @@
 \title{\large
     Adrien is a software and electronics engineer, with an expertise in embedded systems.
     He is interested in robots and space, and cares about automation, open source software and code quality.
-    \vspace{0.5\baselineskip} \newline{}
+    \vspace{0.0\baselineskip} \newline{}
     He recently specialized in aerospace and is interested in launchers and inter-planetary probes.
 }
 
@@ -37,12 +37,12 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
     {GMV}
     {Since May 2019}
     {Madrid, Spain}
-    {On-board Software Engineer - Exomars and Sentinel 5}
+    {Embedded Software Engineer - Exomars and Sentinel 5}
     {
-        \nodItemMission{Exomars: GNC algorithms of the cruise and descent stages}
-        \nodItemMission{Sentinel 5: application software of the UVNS spectrometer}
-        \nodItemMission{Software development: features implementation, unit and integration tests, code coverage and quality metrics}
-        \nodItemSkill{Skills: embedded C, software development standards (ECSS 40B, MISRA-C)}
+        \nodItemMission{Exomars cruise and descent modules: testing and validation of the GNC algorithms, coding, bug fixes and software quality metrics}
+        \nodItemMission{Exomars rover: interfacing the autonomous navigation libraries (CNES) with the rover platform (Airbus UK)}
+        \nodItemMission{Sentinel 5: application software managing the UVNS spectrometer}
+        \nodItemSkill{Skills: embedded C, unit and integration and testing, software development standards (ECSS 40B, MISRA-C)}
     }
 
 \nodCvItem
@@ -68,7 +68,7 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
         \nodItemMission{Implemented a telemetry GUI to monitor the robot status}
         \nodItemMission{Implemented a simulator to assess the performances (recompilation of ARM code for execution on x86)}
         \nodItemSkill{Skills: embedded C/C++, Python (telemetry GUI, software-in-the-loop simulation), CAN bus, ARM \si{\micro}controllers, Git}
-        \nodItemSkill{Source code available: \url{https://github.com/Nodraak/Gali_X_Deoxys}}
+        \nodItemSkill{Video demo and source code available at \normalfont{\url{https://cv.nodraak.fr}}}
     }
 
 \nodCvItem
