--- a/fr.tex
+++ b/fr.tex
@@ -7,9 +7,7 @@
 
 \title{\large
     Adrien est ingénieur en informatique et électronique, avec une expertise en systèmes embarqués.
-    Il est passionné par la robotique et le spatial, et s'intéresse à l'automatisation, le logiciel libre et la qualité logicielle.
-    \vspace{0.0\baselineskip} \newline{}
-    Il s'est spécialisé dans l'aérospatiale et est intéressé par les lanceurs et les sondes inter-planétaires.
+    Il est passionné par la robotique et le spatial (lanceurs et les sondes inter-planétaires), et s'intéresse à l'automatisation, le logiciel libre et la qualité logicielle.
 }
 
 %\address{PLACEHOLDER_ADDRESS1}{PLACEHOLDER_ADDRESS2}
@@ -39,10 +37,10 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
     {Madrid, Espagne}
     {Ingénieur logiciel embarqué - Exomars et Sentinel 5}
     {
-        \nodItemMission{Exomars: algorithmes GNC des étages de transfert (\textit{cruise}) et de descente}
+        \nodItemMission{Exomars - étages de transfert (\textit{cruise}) et de descente : test et validation des algorithmes de GNC, développement, correction de bugs et métriques de qualité logicielle}
+        \nodItemMission{Exomars - rover : interface logicielle entre les bibliothèques de navigation autonomes (CNES) et la plate-forme du rover (Airbus UK)}
         \nodItemMission{Sentinel 5: logiciel applicatif du spectromètre UVNS}
-        \nodItemMission{Développement logiciel: implémentation, tests unitaires et d'intégration, couverture de code et métriques qualité}
-        \nodItemSkill{Compétences: C embarqué, standards (ECSS 40B, MISRA-C)}
+        \nodItemSkill{Compétences: C embarqué, tests unit. et intégration, standards \small{(ECSS 40B, MISRA-C)}}
     }
 
 \nodCvItem
@@ -61,7 +59,7 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
     {ECE Paris}
     {2016-2017}
     {Paris, France}
-    {Projet étudiant - Robot Gali X}
+    {Ingénieur logiciel - Robot Gali X}
     {
         \nodItemMission{Conception et réalisation d'un robot autonome pour la coupe de France de Robotique}
         \nodItemMission{Responsable de la partie informatique avec notamment le développement d'une architecture
@@ -69,7 +67,7 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
         \nodItemMission{Implémentation d'une interface de télémétrie pour surveiller les paramètres du robot}
         \nodItemMission{Implémentation d'un simulateur pour valider les performances (recompilation de code ARM pour exécution sur x86)}
         \nodItemSkill{Compétences : C/C++ embarqué, Python (interface de télémétrie et simulateur), bus CAN, \si{\micro}contrôleurs ARM, Git}
-        \nodItemSkill{Code source disponible : \url{https://github.com/Nodraak/Gali_X_Deoxys}}
+        \nodItemSkill{Demo video et code source : \normalfont{\url{https://cv.nodraak.fr}}}
     }
 
 \nodCvItem
