--- a/en.tex
+++ b/en.tex
@@ -38,9 +38,9 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
     {Madrid, Spain}
     {Embedded Software Engineer - Exomars}
     {
-        \nodItemMission{Exomars rover: as technical responsible I developed and validated a middleware to interface the autonomous navigation libraries (CNES) with the rover platform (Airbus UK). During development, I configured a CI pipeline to ensure high quality code: running automated test on x86 and Sparc, tracking coverage and static analysis results, and automatically generating documentation.}
-        \nodItemMission{Exomars cruise and descent modules: I helped in the development of the GNC algorithms: code and bug fixes, tests and validation, and improvement of the software quality metrics.}
-        \nodItemSkill{Skills: programming (embedded C, Python), unit and integration testing (VectorCast, Tsim, Grmon + Leon 2 FT on Rasta), quality tools (Gitlab CI, Cppcheck, code coverage), software development standards (MISRA-C, ECSS-40B)}
+        \nodItemMission{Exomars rover: as the \textbf{main technical responsible} I developed and validated a middleware to interface the autonomous navigation libraries (CNES) with the rover platform (Airbus UK). During development, I configured a \textbf{CI pipeline to ensure high quality code and up to date reports}: running automated test on x86 and Sparc, tracking coverage and static analysis results, and automatically generating documentation.}
+        \nodItemMission{Exomars cruise and descent modules: I \textbf{helped in the development of the GNC algorithms}: code and bug fixes, tests and validation, and improvement of the software quality metrics.}
+        \nodItemSkill{Skills: programming (embedded C, Python), unit and integration testing (VectorCast, Tsim, Leon 2 FT on Rasta), quality tools (Cppcheck, Gitlab CI, code coverage), software development standards (MISRA-C, ECSS-40B).}
     }
 
 \nodCvItem
@@ -49,10 +49,12 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
     {Paris, France}
     {Project Leader - Smallsat ECE3Sat}
     {
-        \nodItemMission{Designed and built a nano satellite in order to study a new de-orbit technique using Earth's magnetic field}
-        \nodItemMission{Managed the team responsible for the satellite architecture and the on-board computer}
-        \nodItemMission{Implemented the on-board communication bus with CAN and ASN.1 to ensure a reliable communication between subsystems}
-        \nodItemSkill{Skills: distributed architecture design, sizing and \si{\micro}controllers choice, team management and coordination}
+        \nodItemMission{In collaboration with a team of 25 people, I designed and built a nano satellite in order to study a new de-orbit technique using Earth's magnetic field.}
+        \nodItemMission{
+            \textbf{I managed the team} (5 people) responsible for the satellite architecture and the on-board computer.
+            \textbf{We implemented the on-board communication} bus with CAN and ASN.1 to ensure a reliable communication between subsystems.
+        }
+        \nodItemSkill{Skills: distributed architecture design, sizing and \si{\micro}controllers choice, team management and coordination.}
     }
 
 \nodCvItem
@@ -61,14 +63,14 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
     {Paris, France}
     {Software Engineer - Robot Gali X}
     {
-        \nodItemMission{Designed and built an autonomous robot for the French Robotic cup}
-        \nodItemMission{Designed a distributed architecture to allow easier reuse for the future robots}
-        \nodItemMission{Implemented a telemetry GUI to monitor the robot status}
-        \nodItemMission{Implemented a simulator to assess the performances (recompilation of ARM code for execution on x86)}
-        \nodItemSkill{Skills: embedded C/C++, Python (telemetry GUI, software-in-the-loop simulation), CAN bus, ARM \si{\micro}controllers, Git}
+        \nodItemMission{With a team of 5, \textbf{we designed and built an autonomous robot} for the French Robotic cup.}
+        \nodItemMission{\textbf{In charge of the software}, I designed a \textbf{distributed architecture} to allow easier reuse for the future robots.}
+        \nodItemMission{I implemented a \textbf{telemetry GUI} to monitor the robot status and a \textbf{simulator} to assess the performances (recompilation of ARM code for execution on x86).}
+        \nodItemSkill{Skills: embedded C/C++, Python (telemetry GUI, software-in-the-loop simulation), drivers for CAN bus and other peripherals, ARM \si{\micro}controllers, Git.}
         \nodItemSkill{Video demo and source code available at \normalfont{\url{https://cv.nodraak.fr}}}
     }
 
+\vspace{-10pt}
 
 %%%%%%%%%%%%%%%%%%%%
 \nodSection{Education}
@@ -89,6 +91,7 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
 \cventry{French}{Native}{}{}{}{}
 \cventry{English}{Fluent}{TOEIC: scored \newline{} 935/990 in 2017}{}{}{}
 \cventry{Spanish}{Conversational}{}{}{}{}
+\cventry{German}{Notions}{Eager to \newline{} improve}{}{}{}
 
 \end{minipage}
 
@@ -100,7 +103,8 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
 
 \cvitem{Learning and making}{Software and robotics projects - Recently: learning Rust lang}
 \cvitem{Writing}{\url{https://blog.nodraak.fr}}
-\cvitem{Playing}{Kerbal Space Program}
+\cvitem{Sports}{Roller skating, social dancing}
+%\cvitem{Playing}{Kerbal Space Program}
 
 %%%%%%%%%%%%%%%%%%%%
 % Version
