Fix fr (double page)

--- a/fr.tex
+++ b/fr.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt, a4paper, sans]{moderncv}
 
 \usepackage[french]{babel}
-\usepackage[margin=17mm]{geometry}
+\usepackage[margin=17mm,top=15mm,bottom=15mm]{geometry}
 
 \input{common.tex}
 
@@ -65,7 +65,7 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
         \nodItemMission{Responsable de la partie informatique avec notamment le développement d'une architecture
         distribuée pour favoriser la réutilisation pour les années futures}
         \nodItemMission{Implémentation d'une interface de télémétrie pour surveiller les paramètres du robot}
-        \nodItemMission{Implémentation d'un simulateur pour valider les performances (recompilation de code ARM pour exécution sur x86)}
+        \nodItemMission{Implémentation d'un simulateur pour valider les performances (recompilation du code ARM pour exécution sur x86)}
         \nodItemSkill{Compétences : C/C++ embarqué, Python (interface de télémétrie et simulateur), bus CAN, \si{\micro}contrôleurs ARM, Git}
         \nodItemSkill{Demo video et code source : \normalfont{\url{https://cv.nodraak.fr}}}
     }
@@ -80,6 +80,8 @@ PLACEHOLDER_MOBILE_NUMBER  % if \mobile{} is empty, the phone logo still shows u
         \nodItemMission{Implémentation des périphériques GPIO, UART, Timer et Bluetooth BLE}
         \nodItemSkill{Compétences : interface C++, drivers C, \si{\micro}contrôleur ARM, Git}
     }
+
+\vspace{-5pt}
 
 %%%%%%%%%%%%%%%%%%%%
 \nodSection{Formation}
